[package]
name = "twig"
version = "0.0.0"
authors = ["Colin Kiegel <kiegel@gmx.de>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """A template engine for everyone writing web applications \
  with Rust. This library is derived from Twig (for PHP) and intended to \
  become a fully compatible port - as far as it makes sense."""

# These URLs point to more information about the repository
documentation = "https://github.com/colin-kiegel/twig-rust"
homepage = "https://github.com/colin-kiegel/twig-rust"
repository = "https://github.com/colin-kiegel/twig-rust"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["twig", "template", "templating", "engine", "web", "application",
  "html", "language"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "BSD-3-Clause"

[lib]
path = "src/lib.rs"

[dependencies]
regex = "0.1"
